tests/reference/asr-bindc_02-bc1a7ea.stderr
semantic error: Function 'empty_c_void_p' is not declared and not intrinsic
 --> tests/../integration_tests/bindc_02.py:4:17
  |
4 | queries: CPtr = empty_c_void_p()
  |                 ^^^^^^^^^^^^^^^^ 
